significant code changes in all tiers, reflecting changes to allow for Post-Student-Instructor mapping and assignment, as well as post creation wrt as much.

--- a/SchoolBoard.Data/SchoolBoard.Data.csproj
+++ b/SchoolBoard.Data/SchoolBoard.Data.csproj
@@ -54,223 +54,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainModels\Course.cs" />
-    <Compile Include="DomainModels\Post.cs" />
-    <Compile Include="DomainModels\PostReply.cs" />
-    <Compile Include="DomainModels\Student.cs" />
-    <Compile Include="Helpers\IdentityHelper.cs" />
+    <Compile Include="DataModels\Course.cs" />
+    <Compile Include="DataModels\Post.cs" />
+    <Compile Include="DataModels\Student.cs" />
     <Compile Include="IdentityModels.cs" />
-    <Compile Include="Migrations\202104171930473_domainmodels.cs" />
-    <Compile Include="Migrations\202104171930473_domainmodels.Designer.cs">
-      <DependentUpon>202104171930473_domainmodels.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104172005471_applicationuseraddlprop.cs" />
-    <Compile Include="Migrations\202104172005471_applicationuseraddlprop.Designer.cs">
-      <DependentUpon>202104172005471_applicationuseraddlprop.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104172141334_instructorGuidgetset.cs" />
-    <Compile Include="Migrations\202104172141334_instructorGuidgetset.Designer.cs">
-      <DependentUpon>202104172141334_instructorGuidgetset.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104180301299_1101.cs" />
-    <Compile Include="Migrations\202104180301299_1101.Designer.cs">
-      <DependentUpon>202104180301299_1101.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104180420287_StudentInstructorUser.cs" />
-    <Compile Include="Migrations\202104180420287_StudentInstructorUser.Designer.cs">
-      <DependentUpon>202104180420287_StudentInstructorUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104180656355_iid.cs" />
-    <Compile Include="Migrations\202104180656355_iid.Designer.cs">
-      <DependentUpon>202104180656355_iid.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104180714573_314.cs" />
-    <Compile Include="Migrations\202104180714573_314.Designer.cs">
-      <DependentUpon>202104180714573_314.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104180719251_315.cs" />
-    <Compile Include="Migrations\202104180719251_315.Designer.cs">
-      <DependentUpon>202104180719251_315.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104181731139_CourseStudents.cs" />
-    <Compile Include="Migrations\202104181731139_CourseStudents.Designer.cs">
-      <DependentUpon>202104181731139_CourseStudents.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104182306539_CoursePropertytype.cs" />
-    <Compile Include="Migrations\202104182306539_CoursePropertytype.Designer.cs">
-      <DependentUpon>202104182306539_CoursePropertytype.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104202238327_2.cs" />
-    <Compile Include="Migrations\202104202238327_2.Designer.cs">
-      <DependentUpon>202104202238327_2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210021226_3.cs" />
-    <Compile Include="Migrations\202104210021226_3.Designer.cs">
-      <DependentUpon>202104210021226_3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210042496_testcourseseed.cs" />
-    <Compile Include="Migrations\202104210042496_testcourseseed.Designer.cs">
-      <DependentUpon>202104210042496_testcourseseed.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210120007_many-to-manyStudentCourse.cs" />
-    <Compile Include="Migrations\202104210120007_many-to-manyStudentCourse.Designer.cs">
-      <DependentUpon>202104210120007_many-to-manyStudentCourse.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210125485_seedcoursestudent.cs" />
-    <Compile Include="Migrations\202104210125485_seedcoursestudent.Designer.cs">
-      <DependentUpon>202104210125485_seedcoursestudent.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210359040_seedconfig.cs" />
-    <Compile Include="Migrations\202104210359040_seedconfig.Designer.cs">
-      <DependentUpon>202104210359040_seedconfig.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210425346_moreseeddata.cs" />
-    <Compile Include="Migrations\202104210425346_moreseeddata.Designer.cs">
-      <DependentUpon>202104210425346_moreseeddata.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210433174_moreseeddata2.cs" />
-    <Compile Include="Migrations\202104210433174_moreseeddata2.Designer.cs">
-      <DependentUpon>202104210433174_moreseeddata2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210440062_moreseeddata3.cs" />
-    <Compile Include="Migrations\202104210440062_moreseeddata3.Designer.cs">
-      <DependentUpon>202104210440062_moreseeddata3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104210446198_moreseeddatafix.cs" />
-    <Compile Include="Migrations\202104210446198_moreseeddatafix.Designer.cs">
-      <DependentUpon>202104210446198_moreseeddatafix.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104220344222_usersfix.cs" />
-    <Compile Include="Migrations\202104220344222_usersfix.Designer.cs">
-      <DependentUpon>202104220344222_usersfix.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104221944150_UserSeed.cs" />
-    <Compile Include="Migrations\202104221944150_UserSeed.Designer.cs">
-      <DependentUpon>202104221944150_UserSeed.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104271759565_427.cs" />
-    <Compile Include="Migrations\202104271759565_427.Designer.cs">
-      <DependentUpon>202104271759565_427.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104271805214_4.cs" />
-    <Compile Include="Migrations\202104271805214_4.Designer.cs">
-      <DependentUpon>202104271805214_4.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104291904066_enumerable-to-collection.cs" />
-    <Compile Include="Migrations\202104291904066_enumerable-to-collection.Designer.cs">
-      <DependentUpon>202104291904066_enumerable-to-collection.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104300032511_seedId.cs" />
-    <Compile Include="Migrations\202104300032511_seedId.Designer.cs">
-      <DependentUpon>202104300032511_seedId.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104300045540_refid.cs" />
-    <Compile Include="Migrations\202104300045540_refid.Designer.cs">
-      <DependentUpon>202104300045540_refid.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104301757056_ref.cs" />
-    <Compile Include="Migrations\202104301757056_ref.Designer.cs">
-      <DependentUpon>202104301757056_ref.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202105010041127_usernameenable.cs" />
-    <Compile Include="Migrations\202105010041127_usernameenable.Designer.cs">
-      <DependentUpon>202105010041127_usernameenable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202104171930473_domainmodels.resx">
-      <DependentUpon>202104171930473_domainmodels.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104172005471_applicationuseraddlprop.resx">
-      <DependentUpon>202104172005471_applicationuseraddlprop.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104172141334_instructorGuidgetset.resx">
-      <DependentUpon>202104172141334_instructorGuidgetset.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104180301299_1101.resx">
-      <DependentUpon>202104180301299_1101.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104180420287_StudentInstructorUser.resx">
-      <DependentUpon>202104180420287_StudentInstructorUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104180656355_iid.resx">
-      <DependentUpon>202104180656355_iid.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104180714573_314.resx">
-      <DependentUpon>202104180714573_314.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104180719251_315.resx">
-      <DependentUpon>202104180719251_315.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104181731139_CourseStudents.resx">
-      <DependentUpon>202104181731139_CourseStudents.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104182306539_CoursePropertytype.resx">
-      <DependentUpon>202104182306539_CoursePropertytype.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104202238327_2.resx">
-      <DependentUpon>202104202238327_2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210021226_3.resx">
-      <DependentUpon>202104210021226_3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210042496_testcourseseed.resx">
-      <DependentUpon>202104210042496_testcourseseed.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210120007_many-to-manyStudentCourse.resx">
-      <DependentUpon>202104210120007_many-to-manyStudentCourse.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210125485_seedcoursestudent.resx">
-      <DependentUpon>202104210125485_seedcoursestudent.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210359040_seedconfig.resx">
-      <DependentUpon>202104210359040_seedconfig.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210425346_moreseeddata.resx">
-      <DependentUpon>202104210425346_moreseeddata.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210433174_moreseeddata2.resx">
-      <DependentUpon>202104210433174_moreseeddata2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210440062_moreseeddata3.resx">
-      <DependentUpon>202104210440062_moreseeddata3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104210446198_moreseeddatafix.resx">
-      <DependentUpon>202104210446198_moreseeddatafix.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104220344222_usersfix.resx">
-      <DependentUpon>202104220344222_usersfix.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104221944150_UserSeed.resx">
-      <DependentUpon>202104221944150_UserSeed.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104271759565_427.resx">
-      <DependentUpon>202104271759565_427.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104271805214_4.resx">
-      <DependentUpon>202104271805214_4.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104291904066_enumerable-to-collection.resx">
-      <DependentUpon>202104291904066_enumerable-to-collection.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104300032511_seedId.resx">
-      <DependentUpon>202104300032511_seedId.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104300045540_refid.resx">
-      <DependentUpon>202104300045540_refid.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104301757056_ref.resx">
-      <DependentUpon>202104301757056_ref.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202105010041127_usernameenable.resx">
-      <DependentUpon>202105010041127_usernameenable.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
