--- a/SchoolBoard.Data/SchoolBoard.Data.csproj
+++ b/SchoolBoard.Data/SchoolBoard.Data.csproj
@@ -67,6 +67,10 @@
     <Compile Include="Migrations\202105041908518_studentgpa.Designer.cs">
       <DependentUpon>202105041908518_studentgpa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105042050432_fullname.cs" />
+    <Compile Include="Migrations\202105042050432_fullname.Designer.cs">
+      <DependentUpon>202105042050432_fullname.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -80,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105041908518_studentgpa.resx">
       <DependentUpon>202105041908518_studentgpa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105042050432_fullname.resx">
+      <DependentUpon>202105042050432_fullname.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
