last changes before Azure Deploy

--- a/SchoolBoard.MVC/SchoolBoard.MVC.csproj
+++ b/SchoolBoard.MVC/SchoolBoard.MVC.csproj
@@ -192,6 +192,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\green-chalkboard-background.jpg" />
+    <Content Include="Images\SchoolBoard_Logo.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
