create general Courses List view and action

--- a/SchoolBoard.Data/SchoolBoard.Data.csproj
+++ b/SchoolBoard.Data/SchoolBoard.Data.csproj
@@ -59,12 +59,21 @@
     <Compile Include="DataModels\Student.cs" />
     <Compile Include="Helpers\IdentityHelper.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202105050522202_InitialCreate.cs" />
+    <Compile Include="Migrations\202105050522202_InitialCreate.Designer.cs">
+      <DependentUpon>202105050522202_InitialCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202105050522202_InitialCreate.resx">
+      <DependentUpon>202105050522202_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
