--- a/SchoolBoard.Data/SchoolBoard.Data.csproj
+++ b/SchoolBoard.Data/SchoolBoard.Data.csproj
@@ -59,9 +59,9 @@
     <Compile Include="DataModels\Student.cs" />
     <Compile Include="Helpers\IdentityHelper.cs" />
     <Compile Include="IdentityModels.cs" />
-    <Compile Include="Migrations\202105050522202_InitialCreate.cs" />
-    <Compile Include="Migrations\202105050522202_InitialCreate.Designer.cs">
-      <DependentUpon>202105050522202_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\202105051926285_Initial.cs" />
+    <Compile Include="Migrations\202105051926285_Initial.Designer.cs">
+      <DependentUpon>202105051926285_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,8 +71,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202105050522202_InitialCreate.resx">
-      <DependentUpon>202105050522202_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202105051926285_Initial.resx">
+      <DependentUpon>202105051926285_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
