Student Detail view basic razor page

--- a/SchoolBoard.Models/SchoolBoard.Models.csproj
+++ b/SchoolBoard.Models/SchoolBoard.Models.csproj
@@ -5,17 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="PostModels\**" />
     <Compile Remove="StudentModels\**" />
-    <EmbeddedResource Remove="PostModels\**" />
     <EmbeddedResource Remove="StudentModels\**" />
-    <None Remove="PostModels\**" />
     <None Remove="StudentModels\**" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="UserModels\" />
     <Folder Include="PostReplyModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SchoolBoard.Data\SchoolBoard.Data.csproj" />
   </ItemGroup>
 
 </Project>
